--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Send Twitter feed updates via email",
   "main": "src/index.js",
   "scripts": {
-    "build": "jest && webpack -p",
+    "build": "webpack -p --progress",
     "test": "jest"
   },
   "repository": {
